--- a/css/osc.css
+++ b/css/osc.css
@@ -86,6 +86,12 @@ gridlabel{
     border-style: solid;
     font-size: 16px;
 }
+.jsea-item {
+    font-size: 12px !important;
+	line-height: 0.08 !important;
+	font-weight:bold !important;
+    padding: 1px;
+}
 
 .item-content {
     position: relative;
@@ -187,3 +193,11 @@ overflowhidden-demystified/ */
 .signature-item-body {
 	padding: 10px; !important
 }
+
+textarea#styled{
+  box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+  padding: 3px 0px 3px 3px;
+  margin: 5px 1px 3px 0px;
+  border: 1px solid rgba(81, 203, 238, 1);
+}
+
