--- a/templates/deviceDetail.html
+++ b/templates/deviceDetail.html
@@ -84,6 +84,13 @@
 		Always attempt foreground GPS even if logged off
 	</ion-checkbox>
 
+	<ion-item class="item item-button-right" >
+		Reload Site Config
+		<button class="button button-light" ng-click="reloadSiteConfig()">
+			Reload
+		</button>
+	</ion-item>
+
 	<ion-checkbox class="item-checkbox-right" ng-model="pdaParams.jobDetailOneDayOnly" >
 		Query one date only
 	</ion-checkbox>
