--- a/templates/jseaQuestions.html
+++ b/templates/jseaQuestions.html
@@ -25,13 +25,10 @@
 
 
     <div class="button-bar">
-        <button class="button button-large button-energized" ng-click="scan()">
-            Camera Scan
-        </button>
-        <button class="button button-large button-assertive" ng-click="scanCancel()">
+        <button class="button button-large button-assertive" ng-click="jseaCancel()">
             Cancel
         </button>
-        <button class="button button-large button-positive" ng-click="scanSubmit()">
+        <button class="button button-large button-positive" ng-click="jseaSubmit()">
             Submit
         </button>
     </div>
