--- a/templates/jobDetail.html
+++ b/templates/jobDetail.html
@@ -1,4 +1,4 @@
 <!-- this {{generateJobHeader(job)}} causes the interpolation error in Chrome console -->
-<ion-view title="Driver: ({{pdaParams.driverId}}) Vers: {{pdaParams.getAppVersion()}}" ng-controller="JobDetailCtrl">
+<ion-view title="Driver: ({{pdaParams.driverId}}) Vers: {{pdaParams.getAppVersion()}}" >
 	<span ng-include="'templates/jobDetailContent.html'"></span>
 </ion-view>
