--- a/templates/tabs.html
+++ b/templates/tabs.html
@@ -84,5 +84,9 @@
     <ion-nav-view name="messages-tab"></ion-nav-view>
   </ion-tab>
 
+  <!-- Images Tab -->
+  <ion-tab title="Images" icon="icon ion-ios7-photos-outline" href="#/tab/images">
+    <ion-nav-view name="images-tab"></ion-nav-view>
+  </ion-tab>
 
 </ion-tabs>
