--- a/templates/jobDetailContent.html
+++ b/templates/jobDetailContent.html
@@ -113,7 +113,7 @@
 			<button class="button button-positive floatLeft" ng-click="handleJobStatusChange(property.legid)" ng-disabled="syncInProgress"
 				ontouchstart="window.plugins.deviceFeedback.haptic()" ontouchend="window.plugins.deviceFeedback.acoustic()"
 			>
-				Depart Pickup
+				Depart P/up
 			</button>
 		</div>
 
@@ -123,7 +123,7 @@
 			<button class="button button-positive floatLeft" ng-click="handleJobStatusChange(property.legid)" ng-disabled="syncInProgress"
 				ontouchstart="window.plugins.deviceFeedback.haptic()" ontouchend="window.plugins.deviceFeedback.acoustic()"
 			>
-				Arrive Delivery
+				Arrive Delv
 			</button>
 		</div>
 
