--- a/templates/deviceDetail.html
+++ b/templates/deviceDetail.html
@@ -1,5 +1,6 @@
 <ion-view title="{{devicectrl.title}}" ng-controller="deviceCtrl">
-  <ion-content padding="true">
+  <!-- <ion-content padding="true"> -->
+  <ion-content ng-class="{ 'overflow-scroll': (desktopBrowserScrolling == true) }">
 	<ion-list>
 
 	<div class="item item-divider">
