--- a/templates/deviceDetail.html
+++ b/templates/deviceDetail.html
@@ -109,6 +109,10 @@
 		Additional job statuses
 	</ion-checkbox>
 
+	<ion-checkbox ng-if="pdaParams.experimental" class="item-checkbox-right" ng-model="pdaParams.pda_images" >
+		Images
+	</ion-checkbox>
+
 
 	<span ng-if="pdaParams.debugMode">
 		<div class="item item-divider">
