--- a/templates/images.html
+++ b/templates/images.html
@@ -21,7 +21,7 @@
 	</strong>
 
 	<ion-list>
-		<ion-item class="item ite,-thumbnail-left" ng-repeat="image in images.slice().reverse() track by $index">
+		<ion-item class="item item-thumbnail-left" ng-repeat="image in images.slice().reverse() track by $index">
 
 			<img data-ng-src="{{image.nativeURL}}" height="100px">
 			{{image.notes}}
