--- a/templates/deviceDetail.html
+++ b/templates/deviceDetail.html
@@ -156,6 +156,12 @@
 				Reset
 			</button>
 		</ion-item>
+		<ion-item class="item item-button-right" >
+			Clear change data
+			<button class="button button-positive" ng-click="clearChangeData()">
+				Clear
+			</button>
+		</ion-item>
 	</span>
 
 	<div class="item item-divider">
