--- a/templates/jseaQuestions.html
+++ b/templates/jseaQuestions.html
@@ -12,7 +12,8 @@
 
         <ion-item class="jsea-item" ng-repeat=" jseaQuestion in jseaQuestions track by $index" type="item-text-wrap">
 
-			<ion-checkbox class="item-checkbox-right jsea-item" ng-model="jseaQuestion.jdqCbox" > 
+			<ion-checkbox class="item-checkbox-right jsea-item jseaQuestion.jdqDivider?'item-divider':'' " ng-model="jseaQuestion.jdqCbox" 
+					ng-change="checkJdqResponse(jseaQuestion.jdqCbox,jseaQuestion.jdqType,jseaQuestion.jdqOrder,jseaQuestion.jdqNewForm,jseaQuestion.jdqNewFormType)"> 
 <!--
             {{jseaQuestion.jdqOrder}} 
             {{jseaQuestion.jdqType}} 
