--- a/templates/jobIndex.html
+++ b/templates/jobIndex.html
@@ -9,6 +9,9 @@
 		<a class="button button-icon ion-ios7-email-outline" href="#/tab/messages">
 			<span class="badge badge-assertive icon-badge" ng-if="newMessageCount">{{newMessageCount}}</span>
 		</a>
+<!--	attempt to use directive to show mail icon and message count
+		<message-count />
+-->
     </ion-nav-buttons>
 <!-- TODO - new jobs icon of some kind
 	<ion-nav-buttons side="left">
